# c-cpp_base

./: CMakeLists.txt  README.md  README.txt  build.bat  build_n_run.bat  build_n_run.sh  start.bat
batch/: del.bat  globals.bat
c/: main.c  main.h  second.c
cpp/: cpp_main.cpp
linux/: build.sh  run.sh
linux/shell/: globals.sh
release_building/: README.txt  installer.nsi  setup.ps1  uninstall.ps1  win.bat
source/: main.c  second.c
win/: build.bat  run.bat
win/batch/: del.bat  globals.bat  msvs-dev-env.bat
z-win/: build.bat
